Improve organization across Java internals docs
- Roadmap: Fix timeline (8-12 weeks → 14-16 weeks to match 17-week plan),
  add consistent 3-column tables with "How to Verify" across all phases,
  add Hands-On Exercise sections to Phases 2/4/5, fix week overlap
- 01-language-mastery: Add 2-paragraph intro explaining the approach,
  add full Table of Contents with 22 sections + reference appendices
- 06-effective-java: Remove 3 stray H1 range dividers that broke
  the heading hierarchy
- 04-io-nio: Expand thin Scatter/Gather section with explanation and
  key points, add intro paragraph to Performance Guidelines
- 07-java-generics-collections: Expand thin sections (6.3 Exception
  Handling, 6.8 Varargs, 6.9 Arrays as Deprecated) with full
  explanations, code examples, and key points

Co-authored-by: Cursor <cursoragent@cursor.com>