@@ -2,9 +2,9 @@
 
 > **Goal:** Not "I can clear 1Z0-829" — but "I know why this production thread pool just deadlocked."
 
-**Timeline:** 8–12 weeks depending on pace (2–3 hrs/day = ~9 weeks, 1–2 hrs/day = ~12 weeks)
+**Timeline:** 14–16 weeks depending on pace (2–3 hrs/day = ~14 weeks, 1–2 hrs/day = ~16 weeks), plus 1 week of certification revision.
 
-**Strategy:** Spend 8–10 weeks learning deeply, then 1 week revision for 1Z0-829. Knowledge first, certification second.
+**Strategy:** Spend 14–15 weeks learning deeply, then 1 week revision for 1Z0-829. Knowledge first, certification second.
 
 ---
 
@@ -70,34 +70,37 @@ javap -c -p MyLambdaClass.class
 
 **Why this matters:** You're building pricing engines, Kafka consumers, API services. This is where 90% of Java devs fail. This is where production bugs live.
 
-### Core Concepts (Week 5–6)
+### Topics
 
-| Topic | What to Understand |
-|-------|-------------------|
-| Thread lifecycle | NEW → RUNNABLE → BLOCKED → WAITING → TIMED_WAITING → TERMINATED |
-| `synchronized` vs `Lock` | Intrinsic monitor vs ReentrantLock, fairness, tryLock, interruptibility |
-| `volatile` | Visibility guarantee, no atomicity, when it's enough vs when it's not |
-| Happens-before | The formal ordering rule that governs all multithreaded correctness |
-| Visibility vs atomicity | Why `volatile int count` still loses increments under contention |
+| Topic | What to Understand | How to Verify |
+|-------|-------------------|---------------|
+| Thread lifecycle | NEW → RUNNABLE → BLOCKED → WAITING → TIMED_WAITING → TERMINATED | `jcmd <pid> Thread.print` — see actual thread states |
+| `synchronized` vs `Lock` | Intrinsic monitor vs ReentrantLock, fairness, tryLock, interruptibility | Write a deadlock, then detect with `jstack` |
+| `volatile` | Visibility guarantee, no atomicity, when it's enough vs when it's not | Increment `volatile int` from 2 threads — observe lost updates |
+| Happens-before | The formal ordering rule that governs all multithreaded correctness | Read JSR-133 FAQ, trace ordering through code |
+| Visibility vs atomicity | Why `volatile int count` still loses increments under contention | Compare `volatile` vs `AtomicInteger` under contention |
+| ExecutorService | Thread pool lifecycle, shutdown vs shutdownNow | Create pool, submit tasks, call `shutdownNow` — observe interrupts |
+| Callable vs Runnable | Return values, exception propagation | Submit `Callable` that throws — check `Future.get()` wraps in `ExecutionException` |
+| ThreadPool tuning | Core size, max size, queue type, rejection policy | Set core=1, max=1, queue=1, submit 3 tasks — see rejection |
+| ForkJoinPool | Work stealing, common pool shared by parallel streams | `ForkJoinPool.commonPool().getPoolSize()` before/after parallel stream |
+| CompletableFuture | Async composition, thenApply vs thenCompose, exception handling | Chain 3 stages, inject failure in #2 — trace exception propagation |
+| Parallel streams | Uses ForkJoinPool.commonPool() — why this kills Tomcat threads | Print `Thread.currentThread()` inside parallel stream — see pool threads |
+| `ConcurrentHashMap` | Segmented locking (Java 7) → bucket-level CAS (Java 8+) | Use `computeIfAbsent` in a race — verify atomicity |
+| `CopyOnWriteArrayList` | Fast reads, slow writes — good for listeners, bad for mutations | Iterate while adding — no ConcurrentModificationException |
+| `BlockingQueue` | Producer-consumer backbone — used in thread pools internally | Build producer-consumer with `LinkedBlockingQueue` |
 
-### Advanced (Week 7–9)
+### Hands-On Exercise
 
-| Topic | What to Understand |
-|-------|-------------------|
-| ExecutorService | Thread pool lifecycle, shutdown vs shutdownNow |
-| Callable vs Runnable | Return values, exception propagation |
-| ThreadPool tuning | Core size, max size, queue type, rejection policy |
-| ForkJoinPool | Work stealing, common pool shared by parallel streams |
-| CompletableFuture | Async composition, thenApply vs thenCompose, exception handling |
-| Parallel streams | Uses ForkJoinPool.commonPool() — why this kills Tomcat threads |
+```bash
+# Thread dump (see thread states, locks, deadlocks)
+jcmd <pid> Thread.print
 
-### Understand These Data Structures
+# Detect deadlocks automatically
+jstack <pid> | grep -A 5 "deadlock"
 
-| Structure | Why It Matters |
-|-----------|---------------|
-| `ConcurrentHashMap` | Segmented locking (Java 7) → bucket-level CAS (Java 8+) — no global lock |
-| `CopyOnWriteArrayList` | Fast reads, slow writes — good for event listeners, bad for frequent mutations |
-| `BlockingQueue` | Producer-consumer backbone — used in thread pools internally |
+# Monitor thread pool metrics via JMX
+jconsole  # connect to running app, check Threads tab
+```
 
 ### Resources
 
@@ -131,17 +134,17 @@ javap -c -p MyLambdaClass.class
 
 ### Topics
 
-| Topic | What to Understand |
-|-------|-------------------|
-| Heap vs Stack | Stack = per-thread, method frames; Heap = shared, GC-managed objects |
-| Eden / Survivor / Old Gen | Young gen allocation, promotion thresholds, tenuring |
-| G1 GC | Region-based, pause-time target, mixed collections |
-| ZGC | Sub-millisecond pauses, colored pointers, concurrent relocation |
-| Parallel GC | Throughput-optimized, stop-the-world young + old |
-| Stop-The-World | Why all GCs pause, what triggers it, how to minimize it |
-| Escape analysis | JVM proves object doesn't escape method → stack-allocates it |
-| JIT compilation | C1 (client) vs C2 (server), tiered compilation, OSR |
-| Class loading | Bootstrap → Extension → Application, delegation model |
+| Topic | What to Understand | How to Verify |
+|-------|-------------------|---------------|
+| Heap vs Stack | Stack = per-thread, method frames; Heap = shared, GC-managed objects | `jcmd <pid> GC.heap_info` — see regions |
+| Eden / Survivor / Old Gen | Young gen allocation, promotion thresholds, tenuring | GC logs: `-Xlog:gc*` — watch promotion |
+| G1 GC | Region-based, pause-time target, mixed collections | Run with `-XX:+UseG1GC -Xlog:gc*` — observe mixed GCs |
+| ZGC | Sub-millisecond pauses, colored pointers, concurrent relocation | Run with `-XX:+UseZGC -Xlog:gc*` — compare pause times |
+| Parallel GC | Throughput-optimized, stop-the-world young + old | Run with `-XX:+UseParallelGC` — measure throughput vs latency |
+| Stop-The-World | Why all GCs pause, what triggers it, how to minimize it | GC logs: search for "pause" — measure STW duration |
+| Escape analysis | JVM proves object doesn't escape method → stack-allocates it | `-XX:+PrintEscapeAnalysis` or JMH benchmark with/without |
+| JIT compilation | C1 (client) vs C2 (server), tiered compilation, OSR | `-XX:+PrintCompilation` — watch methods compile from C1→C2 |
+| Class loading | Bootstrap → Extension → Application, delegation model | `-verbose:class` — see which classloader loads what |
 
 ### Hands-On: Run These on Your Spring Boot App
 
@@ -193,20 +196,31 @@ jcmd <pid> JFR.start duration=60s filename=recording.jfr
 
 ---
 
-## Phase 4 — I/O + NIO (Weeks 12–13)
+## Phase 4 — I/O + NIO (Weeks 13–14)
 
 **Why this matters:** This explains why Netty is faster than traditional servlet I/O, and why reactive frameworks exist.
 
 ### Topics
 
-| Topic | What to Understand |
-|-------|-------------------|
-| Blocking I/O | Thread-per-connection model, why it doesn't scale |
-| Non-blocking I/O | Selector + Channel + Buffer pattern |
-| Selector | Multiplexing — one thread monitors many channels |
-| Channel | Bidirectional, connects to file/socket/pipe |
-| Buffer | Direct vs heap buffers, flip/compact/clear lifecycle |
-| Memory-mapped files | `MappedByteBuffer` — OS-level page cache, zero-copy |
+| Topic | What to Understand | How to Verify |
+|-------|-------------------|---------------|
+| Blocking I/O | Thread-per-connection model, why it doesn't scale | Write a blocking server, connect 1000 clients — watch thread count |
+| Non-blocking I/O | Selector + Channel + Buffer pattern | Write NIO echo server — single thread handles multiple clients |
+| Selector | Multiplexing — one thread monitors many channels | `selector.select()` — observe readiness events |
+| Channel | Bidirectional, connects to file/socket/pipe | Compare `FileChannel` vs `InputStream` throughput |
+| Buffer | Direct vs heap buffers, flip/compact/clear lifecycle | `ByteBuffer.allocateDirect()` vs `allocate()` — benchmark |
+| Memory-mapped files | `MappedByteBuffer` — OS-level page cache, zero-copy | Map a large file, random-access read — compare with `RandomAccessFile` |
+
+### Hands-On Exercise
+
+```bash
+# Compare blocking vs NIO throughput
+# Write both servers, use Apache Bench:
+ab -n 10000 -c 100 http://localhost:8080/
+
+# Monitor file descriptors (Linux/Mac)
+lsof -p <pid> | wc -l
+```
 
 ### Key Insight
 
@@ -232,20 +246,30 @@ This is why Netty, gRPC, and reactive stacks exist.
 
 ---
 
-## Phase 5 — JDBC + Transactions (Weeks 14–15)
+## Phase 5 — JDBC + Transactions (Weeks 15–16)
 
-**Why this matters:** Directly relevant to your Harbor pricing platform — SKU pricing writes, overrides logic, connection management under load.
+**Why this matters:** Directly relevant to production backend systems — writes, overrides logic, connection management under load.
 
 ### Topics
 
-| Topic | What to Understand |
-|-------|-------------------|
-| Auto-commit | Default is `true` — every statement is its own transaction |
-| Isolation levels | READ_UNCOMMITTED → READ_COMMITTED → REPEATABLE_READ → SERIALIZABLE |
-| Phantom reads | Why REPEATABLE_READ doesn't prevent range-query anomalies |
-| Connection pooling | Why creating connections is expensive, how pools recycle them |
-| HikariCP | Why it's the fastest — ConcurrentBag, lock-free design, connection validation |
-| Batch operations | `addBatch()` + `executeBatch()` — 10-100x faster for bulk writes |
+| Topic | What to Understand | How to Verify |
+|-------|-------------------|---------------|
+| Auto-commit | Default is `true` — every statement is its own transaction | `conn.getAutoCommit()` — toggle and observe commit behavior |
+| Isolation levels | READ_UNCOMMITTED → READ_COMMITTED → REPEATABLE_READ → SERIALIZABLE | Open 2 connections, set different levels — reproduce dirty/phantom reads |
+| Phantom reads | Why REPEATABLE_READ doesn't prevent range-query anomalies | Run range SELECT in txn1, INSERT in txn2, re-SELECT in txn1 |
+| Connection pooling | Why creating connections is expensive, how pools recycle them | Time `DriverManager.getConnection()` vs HikariCP pool — compare |
+| HikariCP | Why it's the fastest — ConcurrentBag, lock-free design, connection validation | Enable HikariCP metrics, observe pool stats under load |
+| Batch operations | `addBatch()` + `executeBatch()` — 10-100x faster for bulk writes | Insert 10K rows with/without batch — compare elapsed time |
+
+### Hands-On Exercise
+
+```bash
+# Monitor active DB connections (PostgreSQL)
+SELECT count(*) FROM pg_stat_activity WHERE state = 'active';
+
+# Enable HikariCP leak detection
+spring.datasource.hikari.leak-detection-threshold=30000
+```
 
 ### Resources
 
@@ -314,10 +338,12 @@ If time is limited, start with these — they directly improve Spring Boot apps,
 | 9 | 2 | Concurrent collections, parallel streams | JCiP (Ch. 5), Venkat's talk |
 | 10 | 3 | Heap layout, GC types, GC logging | JVM book, Anatomy Quarks |
 | 11 | 3 | JIT, escape analysis, class loading | JVM book, `jcmd` exercises |
-| 12 | 3+4 | Profiling your app + NIO basics | jvisualvm, Java NIO book |
-| 13 | 4+5 | NIO deep dive + JDBC/transactions | NIO book, Vlad Mihalcea |
-| 14 | 5 | Connection pooling, HikariCP, batch ops | Vlad Mihalcea |
-| 15 | — | **1Z0-829 Revision** | Enthuware mock tests + review |
+| 12 | 3 | Profiling your app, Flight Recorder | jvisualvm, JFR exercises |
+| 13 | 4 | NIO: Selectors, Channels, Buffers | Java NIO book |
+| 14 | 4 | Memory-mapped files, Netty overview | NIO book, Netty in Action |
+| 15 | 5 | JDBC, isolation levels, transactions | Vlad Mihalcea |
+| 16 | 5 | Connection pooling, HikariCP, batch ops | Vlad Mihalcea |
+| 17 | — | **1Z0-829 Revision** | Enthuware mock tests + review |
 
 ---
 
